# point_cloud_modelling

./: .gitignore  README.md  hello_world.py  notebook.ipynb
examples/: apaslab.bt  apaslab.pcd  edulab.bt  env3.bt  env8.bt  hodnik.bt  house.bt
models/: example.json
plane_detection/: README.md  hello_world.py  notebook.ipynb  segmentation.py  utils.py
results/: env3.json  env8.json  env9.json  room1.json  room2.json  room3.json  room4.json  room5.json  room6.json  turtlebot_house_ground_truth.json
simulate_realsense_d435i/: CMakeLists.txt  README.md  octomap_open.cpp  octomap_saver.cpp  package.xml  setup.cfg  setup.py
simulate_realsense_d435i/launch/: simulate_realsense_d435i.launch.py
simulate_realsense_d435i/models/env8/: model.sdf
simulate_realsense_d435i/models/env9/: model.sdf
simulate_realsense_d435i/models/turtlebot3_realsense/: model.sdf
simulate_realsense_d435i/results/: env3.bt  env9.bt
simulate_realsense_d435i/rviz/: urdf.rviz
simulate_realsense_d435i/sdf/models/env3/: model.sdf
simulate_realsense_d435i/sdf/models/env8/: model.sdf
simulate_realsense_d435i/sdf/models/env9/: model.sdf
simulate_realsense_d435i/sdf/worlds/: env3_world.sdf  env8_world.sdf  env9_world.sdf  house_world.sdf
simulate_realsense_d435i/simulate_realsense_d435i/: get_pcd.py  pos.py  teleop_keyboard.py  testing.py  utils.py
simulate_realsense_d435i/urdf/: turtlebot3_burger.urdf.xacro
simulate_realsense_d435i/worlds/: env3.world  env8.world
src/: clusters.py  merge_rooms.py  segmentation.py  utils.py  visualize.py
step_two/: README.md
(+15 files in other folders)
